Update Nhóm Kiều Phương.html

--- a/Nhóm Kiều Phương.html
+++ b/Nhóm Kiều Phương.html
@@ -69,5 +69,5 @@
   <h2>Chào mừng bạn đến với Thanh Xuân Tươi Đẹp – Tuổi trẻ chỉ có một lần, hãy sống cho thật rực rỡ!</h2>
   <p>Khoảnh khắc của tuổi trẻ là những điều tuyệt vời và đáng nhớ nhất cuộc đời.</p>
   <img src="7d05dee3-9f5a-4617-8daf-4593ff19de28.jpg"> 
-  <img src="file:///C:/Users/Hoa.Trinh/Pictures/z6563161618647_7c0c858f3cfcfeebfb19e5e2f1e8096c.html" alt="Trường học của tôi">
+  <img src="z6567941378757_1ac31e48d9dba7dc2f2ba788d86f7f20.jpg" alt="Trường học của tôi">
   </section>
