--- a/mới 2.html
+++ b/mới 2.html
@@ -71,7 +71,7 @@
     <p>🌿 Thanh Xuân Tươi Đẹp là hành trình ghi dấu những khoảnh khắc rực rỡ nhất của tuổi trẻ — khi nụ cười còn trong veo, ước mơ còn vẹn nguyên, và trái tim luôn rạo rực trước mọi điều mới mẻ. Đây là không gian để bạn lưu giữ, sẻ chia và lan tỏa vẻ đẹp tinh khôi của thanh xuân: từ ánh mắt, nụ cười đến những câu chuyện đầy cảm hứng.</p>
     <img src="49b63989-2179-4d60-b258-8407ab39b370.jpg" alt="Nhóm bạn trẻ vui vẻ">
     <p>Lớp chúng em gồm 46 thành viên, trong đó có 35 bạn nam và 11 bạn nữ, là những cá tính đa dạng nhưng luôn đoàn kết và yêu thương nhau như một gia đình.<p>
-    <img src="file:///D:/Users/Hoa.Trinh/Downloads/Anh3.html" alt="Nhóm bạn trẻ vui vẻ">
+    <img src="fb25ab4e-8917-4204-b3ca-af15f9679e30.jpg" alt="Nhóm bạn trẻ vui vẻ">
     <p>Dưới sự dẫn dắt tận tâm đầy yêu thương của cô giáo chủ nhiệm Nguyễn Thị Lan Hương, chúng em đã cùng nhau vượt qua bao thử thách của những năm tháng cấp ba, cùng học tập, rèn luyện và trưởng thành.<p>
     <img src="file:///C:/Users/Hoa.Trinh/Pictures/Anh5.html" alt="Nhóm bạn trẻ vui vẻ">
     <p>Mỗi thành viên trong lớp đều mang một màu sắc riêng, góp phần tạo nên một tập thể vững mạnh, sáng tạo và đầy nhiệt huyết. Chúng em tự hào vì đã luôn giữ được tinh thần đoàn kết, cùng nhau nỗ lực hết mình cho kỳ thi sắp tới và những mục tiêu lớn hơn trong tương lai.
