--- a/mới 2.html
+++ b/mới 2.html
@@ -73,7 +73,7 @@
     <p>Lớp chúng em gồm 46 thành viên, trong đó có 35 bạn nam và 11 bạn nữ, là những cá tính đa dạng nhưng luôn đoàn kết và yêu thương nhau như một gia đình.<p>
     <img src="fb25ab4e-8917-4204-b3ca-af15f9679e30.jpg" alt="Nhóm bạn trẻ vui vẻ">
     <p>Dưới sự dẫn dắt tận tâm đầy yêu thương của cô giáo chủ nhiệm Nguyễn Thị Lan Hương, chúng em đã cùng nhau vượt qua bao thử thách của những năm tháng cấp ba, cùng học tập, rèn luyện và trưởng thành.<p>
-    <img src="file:///C:/Users/Hoa.Trinh/Pictures/Anh5.html" alt="Nhóm bạn trẻ vui vẻ">
+    <img src="z6563010686999_f26e5adc4e13023a67dbcd02a238d8b1.jpg" alt="Nhóm bạn trẻ vui vẻ">
     <p>Mỗi thành viên trong lớp đều mang một màu sắc riêng, góp phần tạo nên một tập thể vững mạnh, sáng tạo và đầy nhiệt huyết. Chúng em tự hào vì đã luôn giữ được tinh thần đoàn kết, cùng nhau nỗ lực hết mình cho kỳ thi sắp tới và những mục tiêu lớn hơn trong tương lai.
     <img src="file:///D:/Users/Hoa.Trinh/Downloads/4e5.html" alt="Nhóm bạn trẻ vui vẻ">
     <p>Chúng em xin chân thành cảm ơn cô Nguyễn Thị Lan Hương – người đã luôn âm thầm dõi theo, đồng hành và là ngọn đèn soi sáng cho tập thể lớp suốt chặng đường vừa qua.<p>
