--- a/mới 2.html
+++ b/mới 2.html
@@ -77,6 +77,6 @@
     <p>Mỗi thành viên trong lớp đều mang một màu sắc riêng, góp phần tạo nên một tập thể vững mạnh, sáng tạo và đầy nhiệt huyết. Chúng em tự hào vì đã luôn giữ được tinh thần đoàn kết, cùng nhau nỗ lực hết mình cho kỳ thi sắp tới và những mục tiêu lớn hơn trong tương lai.
     <img src="4e5dae67-eae0-471e-94ab-7c48b1fff119.jpg" alt="Nhóm bạn trẻ vui vẻ">
     <p>Chúng em xin chân thành cảm ơn cô Nguyễn Thị Lan Hương – người đã luôn âm thầm dõi theo, đồng hành và là ngọn đèn soi sáng cho tập thể lớp suốt chặng đường vừa qua.<p>
-    <img src="file:///C:/Users/Hoa.Trinh/Pictures/z6.html" alt="Nhóm bạn trẻ vui vẻ">
+    <img src="z6563010687023_d712840b420707986609f6d6ddcc6ad8.jpg" alt="Nhóm bạn trẻ vui vẻ">
 	<p>Ta sống hết mình, yêu không toan tính, và tin rằng chỉ cần có ước mơ thì mọi điều đều có thể. Dẫu thời gian có trôi, thanh xuân vẫn luôn ở lại trong tim như một miền ký ức dịu dàng, đầy ánh sáng và những điều chưa kịp gọi thành tên.<p>
   </section>
