--- a/mới 2.html
+++ b/mới 2.html
@@ -61,7 +61,7 @@
     <h1>[ THANH XUÂN TƯƠI ĐẸP ]</h1>
     <nav>
       <a href="file:///D:/Users/Hoa.Trinh/Documents/m%E1%BB%9Bi%201.html">Trang chủ</a>
-      <a href="file:///D:/Users/Hoa.Trinh/Documents/m%E1%BB%9Bi%202.html">Giới thiệu</a>
+      <a href="mới 2.html">Giới thiệu</a>
       <a href="file:///D:/Users/Hoa.Trinh/Documents/m%E1%BB%9Bi%203.html">Liên hệ</a>
     </nav>
   </header>
