--- a/mới 3.html
+++ b/mới 3.html
@@ -67,7 +67,7 @@
   </header>
   <main>
   <section class="content" id="contact">
-    <img src="file:///D:/Users/Hoa.Trinh/Downloads/oc.html" alt="Ảnh cuối">
+    <img src="0c3969e0-4f06-42ad-9230-1acd7d709521.jpg" alt="Ảnh cuối">
     <h2>Liên hệ</h2>
     <p>Thanh xuân tươi đẹp là bản giao hưởng ngọt ngào của những giấc mơ, của tiếng cười trong veo và ánh mắt long lanh đầy hy vọng.</p>
     <p>Email: a1k56phuctho@gmail<p>
