--- a/mới 3.html
+++ b/mới 3.html
@@ -62,7 +62,7 @@
     <nav>
       <a href="file:///D:/Users/Hoa.Trinh/Documents/m%E1%BB%9Bi%201.html">Trang chủ</a>
       <a href="file:///D:/Users/Hoa.Trinh/Documents/m%E1%BB%9Bi%202.html">Giới thiệu</a>
-      <a href="file:///D:/Users/Hoa.Trinh/Documents/m%E1%BB%9Bi%203.html">Liên hệ</a>
+      <a href="mới 3.html">Liên hệ</a>
     </nav>
   </header>
   <main>
