Update Nhóm Kiều Phương.html

--- a/Nhóm Kiều Phương.html
+++ b/Nhóm Kiều Phương.html
@@ -60,7 +60,7 @@
     <nav>
       <a href="file:///D:/Users/Hoa.Trinh/Documents/m%E1%BB%9Bi%201.html">Trang chủ</a>
       <a href="mới 2.html">Giới thiệu</a>
-      <a href="file:///D:/Users/Hoa.Trinh/Documents/m%E1%BB%9Bi%203.html">Liên hệ</a>
+      <a href="mới 3.html">Liên hệ</a>
     </nav>
   </header>
 
