Update Nhóm Kiều Phương.html

--- a/Nhóm Kiều Phương.html
+++ b/Nhóm Kiều Phương.html
@@ -58,7 +58,7 @@
   <header>
     <h1>[ THANH XUÂN TƯƠI ĐẸP ]</h1>
     <nav>
-      <a href="file:///D:/Users/Hoa.Trinh/Documents/m%E1%BB%9Bi%201.html">Trang chủ</a>
+      <a href="Nhóm Kiều Phương.html">Trang chủ</a>
       <a href="mới 2.html">Giới thiệu</a>
       <a href="mới 3.html">Liên hệ</a>
     </nav>
